{{$NEXT}}

1.11     2020-12-29

- Fix bug in DROLSKY::PerlLinterConfigFiles plugin.


1.10     2020-12-29

- Replace code to set up tidyall with code to set up precious
  (https://github.com/houseabsolute/precious).


1.09     2020-07-20

- Update generated perltidyrc to work around changes in recent Perl::Tidy
  versions that interact badly with
  https://github.com/houseabsolute/perl-code-tidyall/issues/84.


1.08     2020-05-03

- Require PromptIfStale 0.056. That version skips all local plugins when
  checking for staleness. This lets me revert the change in 1.07.


1.07     2020-04-26

- Make the PromptIfStale plugin skip all inc::* packages that live in the inc/
  dir.


1.06     2020-03-14

- Allow an existing COPYRIGHT section to override the section generated by
  Pod::Weaver. This fixes https://github.com/houseabsolute/Specio/issues/17.


1.05     2019-11-29

- Fix check for whether we're being run in CI in the Pod::Weaver bundle as
  well. Without this the bundle generated bad POD with an empty `L<>` tag.


1.04     2019-11-28

- Fix check for whether we're being run in CI.


1.03     2019-11-28

- Don't include GitHub::Meta when running under Azure Pipelines.


1.02     2019-11-09

- And more tweaks to the generated CONTRIBUTING.md file.


1.01     2018-08-01

- More tweaks to the generated CONTRIBUTING.md file.


1.00     2018-07-30

- More tweaks and typo fixes in the generated CONTRIBUTING.md file.


0.99     2018-06-21

- Add a plugin to generate a CODE_OF_CONDUCT.md and copy this into the repo
  after release. The text is from
  https://www.contributor-covenant.org/version/1/4/code-of-conduct.html.


0.98     2018-06-09

- More tweaks to the CONTRIBUTING.md file.


0.97     2018-06-09

- Fixed a small issue in the generated CONTRIBUTING.md file for distros.


0.96     2018-06-09

- Work around a bug in MakeMaker::Awesome that causes it to not include code
  in the Makefile.PL to indicate the minimum required version of Perl when one
  exists. See