@@ -87,15 +87,14 @@ pass.
 
 This distribution uses [precious](https://github.com/houseabsolute/precious)
 to enforce a uniform coding style. This is tested as part of the author
-testing suite. You can install and run precious by running the following
-command:
-
-    $> curl https://raw.githubusercontent.com/houseabsolute/precious/master/dev/bin/install-precious.packed.pl \
-           | perl
-    $> precious lint -a
+testing suite. You can install this and any other necessary non-Perl tools by
+running `./dev-bin/install-xt-tools.sh`.
 
 Please run this before committing your changes and address any issues it
 brings up.
+
+You can also set up a git pre-commit hook that checks all changed files for
+linting issues by running `./git/setup.pl`.
 
 ## Contributor Names
 
@@ -108,4 +107,4 @@ request to the `.mailmap` file to contain the correct mapping.
 ## Generated By
 
 This file was generated via Dist::Zilla::Plugin::GenerateFile::FromShareDir 0.014 from a
-template file originating in Dist-Zilla-PluginBundle-DROLSKY-1.10.
+template file originating in Dist-Zilla-PluginBundle-DROLSKY-1.12.
