@@ -1,5 +1,5 @@
 # This Makefile.PL for Dist-Zilla-PluginBundle-DROLSKY was generated by
-# Dist::Zilla::Plugin::DROLSKY::MakeMaker 1.10
+# Dist::Zilla::Plugin::DROLSKY::MakeMaker 1.12
 # and Dist::Zilla::Plugin::MakeMaker::Awesome 0.48.
 # Don't edit it but the dist.ini and plugins used to construct it.
 
