@@ -117,7 +117,9 @@ on 'develop' => sub {
   requires "IPC::Open3" => "0";
   requires "Perl::Critic" => "1.126";
   requires "Perl::Tidy" => "20160302";
+  requires "Pod::Checker" => "1.74";
   requires "Pod::Coverage::TrustPod" => "0";
+  requires "Pod::Tidy" => "0.10";
   requires "Pod::Wordlist" => "0";
   requires "Test::CPAN::Changes" => "0.19";
   requires "Test::CPAN::Meta::JSON" => "0.16";
