@@ -14,25 +14,16 @@ use Path::Tiny::Rule;
 
 use Moose;
 
-with 'Dist::Zilla::Role::BeforeBuild';
+with qw(
+    Dist::Zilla::Plugin::DROLSKY::Role::MaybeFileWriter
+    Dist::Zilla::Role::BeforeBuild
+);
 
 sub before_build {
     my $self = shift;
 
     $self->_maybe_write_file( 'perltidyrc',   $self->_perltidyrc );
     $self->_maybe_write_file( 'perlcriticrc', $self->_perlcriticrc );
-
-    return;
-}
-
-sub _maybe_write_file {
-    my $self    = shift;
-    my $file    = shift;
-    my $content = shift;
-
-    return if -e $file;
-
-    path($file)->spew_utf8($content);
 
     return;
 }
